# RAG

./: .gitignore  README.md  build_vector_store.py  config.yaml  main.py  pyproject.toml  retriever.py
frontend/: app.py
texts/: texts.txt
utils/: retriever.py  utils.py  vector_store.py
