[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "langchain-ollama>=0.3.5",
    "matplotlib>=3.10.3",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "streamlit>=1.47.0",
    "traceloop-sdk>=0.43.1",
]
